# django-xmltables

./: README.rst  admin.py  apps.py  models.py  setup.cfg  techstack.md  techstack.yml  urls.py  views.py
migrations/: 0001_initial.py  0002_xmlcolumn_col_xsd_type.py  0003_auto_20200827_0924.py
templates/: base.html  xmlcolumn.sql  xmlcolumn_set.sql  xmlnamespace.sql  xmlnamespace_set.sql  xmltable.sql
templates/xmltables/: xmltable_list.html
xmltables/: admin.py  models.py
